Add support for listing all channels within a given realm. #88
