# src/api/admin/v1/mappers/index.js
@@ -1,6 +1,8 @@
 const account = require('./account');
 const auth = require('./auth');
 const authList = require('./auth-list');
+const channel = require('./channel');
+const channelList = require('./channel-list');
 const realm = require('./realm');
 const realmList = require('./realm-list');
 
@@ -11,6 +13,8 @@ module.exports = {
   account,
   auth,
   authList,
+  channel,
+  channelList,
   realm,
   realmList,
 };
