# src/api/admin/v1/openapi/definitions.yaml
@@ -91,6 +91,49 @@ Account:
       required:
         - email
 
+# channel entity
+Channel:
+  allOf:
+    - $ref: '#/definitions/BaseEntity'
+    - properties:
+        features:
+          $ref: '#/definitions/ChannelFeatures'
+        properties:
+          type: object
+      required:
+        - properties
+    - $ref: '#/definitions/TimestampsTrait'
+
+ChannelFeatures:
+  type: object
+  properties:
+    persistence:
+      $ref: '#/definitions/ChannelFeaturePersistence'
+
+ChannelFeaturePersistence:
+  type: object
+  properties:
+    enabled:
+      type: boolean
+      description: Flag to switch message persistence on/off.
+    duration:
+      type: string
+      pattern: '^\d+[smhd]$'
+      description: |
+        Time interval to persist messages published on channel. If not set messages will be
+        persisted forever. Supported units: s, m, h, d
+
+ChannelList:
+  allOf:
+    - $ref: '#/definitions/BaseList'
+    - properties:
+        items:
+          type: array
+          items:
+            $ref: '#/definitions/Channel'
+      required:
+        - items
+
 AuthToken:
   allOf:
     - $ref: '#/definitions/BaseEntity'
